--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox layout</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/style.css" /> -->
+    <link rel="stylesheet" href="./assets/css/adaptive.css">
   </head>
   <body>
     <div class="container">
-      <div class="elem">Text 1</div>
-
-      <div class="elem">Text 2</div>
-      <div class="elem">Text 3</div>
-      
-      <div class="elem">Text 4</div>
-
-
+      <div class="name">Lorem, ipsum dolor sit amet consectetur adipisicing </div>
+      <div class="date">2020.20.12</div>
+    </div>
+    <div class="container">
+      <div class="name">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, ipsum.</div>
+      <div class="date">2020.20.12</div>
+    </div>
+    <div class="container">
+      <div class="name">Lorem, ipsum dolor sit </div>
+      <div class="date">2020.20.12</div>
     </div>
   </body>
 </html>
